manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travely-client
  labels:
    app: travely-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: travely-client
  template:
    metadata:
      labels:
        app: travely-client
    spec:
      containers:
      - name: travely-client
        image: titancamp/travely-client:latest
        ports:
        - containerPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: travely-client-service
  namespace: dev
  labels:
    app: travely-client
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: travely-client
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress-no-third-host
spec:
  rules:
  - host: travely.am
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: travely-client-service
            port:
              number: 80
  - host: www.travely.am
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: travely-client-service
            port:
              number: 80
  - host: api.travely.am
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tourmanager-api-service
            port:
              number: 80
  - host: notification.travely.am
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: schedulermanager-api-service
            port:
              number: 80
